changed pg credentials for development database

--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,8 @@ development:
   encoding: unicode
   database: gvodev_development
   pool: 5
-  username: gvodev
-  password:
+  username: postgres
+  password: 4postGREsqueal!
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
